--- a/src/components/HeroHomePage/HeroHomePage.module.scss
+++ b/src/components/HeroHomePage/HeroHomePage.module.scss
@@ -49,7 +49,7 @@
     padding-right: clamp(1.25rem, 0.8333rem + 1.0417vw, 1.5rem);
     padding-top: 0;
     // padding-bottom: clamp(2.5rem, 0rem + 6.25vw, 4rem);
-    padding-bottom:  clamp(1.25rem, -0.7965rem + 5.5vw, 4rem);;
+    padding-bottom:  clamp(1.25rem, -0.7965rem + 5.5vw, 4rem);
 }
 
 .Badge {
