--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -6,6 +6,7 @@ $background: #fff;
 $backgroundSecondary: #FCED8C;
 $backgroundTertiary: #F9DB4B;
 $backgroundQuaternary: #9E5F0A;
+$backgroundDark: #411f07;
 
 
 $secondaryText: #64748B;
