--- a/src/app/explorar/Explorar.module.scss
+++ b/src/app/explorar/Explorar.module.scss
@@ -8,14 +8,18 @@
     padding: 32px 0px 80px 0px;
     padding-left: clamp(1.25rem, -2.5rem + 7.8125vw, 2.5rem);
     padding-right: clamp(1.25rem, -2.5rem + 7.8125vw, 2.5rem);
-display: flex;
-flex-direction: column;
-gap: 2rem;
+    display: flex;
+    align-items: space-between;
+    flex-direction: column;
+    gap: 2rem;
 
     @media(max-width:768px) {
-        flex-direction: column;
-        align-items: flex-start;
         gap: 1rem;
+    }
+
+    >footer {
+        display: flex;
+        justify-content: center;
     }
 }
 
@@ -23,6 +27,12 @@ gap: 2rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 1rem;
+
+    @media (max-width:640px) {
+        flex-direction: column;
+        align-items: start;
+    }
 
     >form {
         display: flex;
@@ -48,11 +58,13 @@ gap: 2rem;
     gap: 0.5rem;
 
     h1 {
-        font-size: clamp(1.5rem, 0.7844rem + 2.2901vw, 2.25rem);
+        // font-size: clamp(1.5rem, 0.7844rem + 2.2901vw, 2.25rem);
+        font-size: clamp(1.25rem, 0.45rem + 2vw, 2.25rem);
     }
 
     p {
-        font-size: clamp(1rem, 0.8807rem + 0.3817vw, 1.125rem);
+        // font-size: clamp(1rem, 0.8807rem + 0.3817vw, 1.125rem);
+        font-size: clamp(0.75rem, 0.45rem + 0.75vw, 1.125rem);
     }
 }
 
