--- a/src/app/explorar/Paginado/Paginado.module.scss
+++ b/src/app/explorar/Paginado/Paginado.module.scss
@@ -1,50 +1,98 @@
+@import "../../styles/_variables.scss";
+
 .pagination {
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     gap: 0.5rem;
     margin-top: 2rem;
+    flex-wrap: wrap;
 
     &__btn {
         border: 1px solid #d1d5db;
-        background: white;
-        color: #111827;
-        padding: 0.5rem 0.75rem;
-        border-radius: 0.375rem;
-        cursor: pointer;
+        width: 2.5rem;
+        height: 2.5rem;
         font-size: 1rem;
-        transition: background 0.2s;
+        background-color: $backgroundDark;
+        border: none;
+        color: $primary-color;
+        font-weight: bold;
+        border-radius: 4px;
+        cursor: pointer;
 
-        &:hover {
-            background: #f3f4f6;
+
+        &:disabled {
+            opacity: 0.4;
+            cursor: not-allowed;
+        }
+
+        @media (max-width:640px) {
+            width: 1.5rem;
+            height: 1.5rem;
+            font-size: 12px;
+        }
+
+        @media (max-width: 400px) {
+            order: 1;
         }
     }
 
     &__list {
         display: flex;
+        align-items: center;
         gap: 0.5rem;
         list-style: none;
         padding: 0;
         margin: 0;
+
+        @media (max-width: 400px) {
+            // Ocupa toda la fila
+            width: 100%;
+            justify-content: center;
+            order: 0;
+        }
     }
 
     &__page {
-        border: 1px solid #d1d5db;
-        background: white;
-        color: #111827;
-        padding: 0.5rem 0.75rem;
-        border-radius: 0.375rem;
+        width: 2.5rem;
+        height: 2.5rem;
+        border: none;
+        border-radius: 4px;
+        background-color: #fff;
+        font-size: 1rem;
+        color: $backgroundDark;
         cursor: pointer;
-        transition: background 0.2s;
+        transition: background 0.2s ease;
 
         &:hover {
-            background: #e5e7eb;
+            background-color: $terciaryText;
         }
 
-        &--active {
-            background: #3b82f6; // azul
-            color: white;
+        &.active {
+            background-color: $primary-color;
             font-weight: bold;
+        }
+
+        @media (max-width: 640px) {
+            width: 1.5rem;
+            height: 1.5rem;
+            font-size: 12px;
+        }
+    }
+
+    &__ellipsis {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        width: 40px;
+        height: 40px;
+        font-size: 1rem;
+        color: #999;
+
+        @media (max-width: 768px) {
+            width: 32px;
+            height: 32px;
+            font-size: 12px;
         }
     }
 }
