--- a/src/app/explorar/Section/Section.module.scss
+++ b/src/app/explorar/Section/Section.module.scss
@@ -2,9 +2,13 @@
 
 .Container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     gap: 1.5rem;
     width: 100%;
+
+    @media (max-width:1440px) {
+        grid-template-columns: repeat(4, 1fr);
+    }
 
     @media (max-width: 1024px) {
         grid-template-columns: repeat(3, 1fr);
