--- a/src/components/HeroHomePage/HeroHomePage.module.scss
+++ b/src/components/HeroHomePage/HeroHomePage.module.scss
@@ -49,7 +49,7 @@
     padding-right: clamp(1.25rem, 0.8333rem + 1.0417vw, 1.5rem);
     padding-top: 0;
     // padding-bottom: clamp(2.5rem, 0rem + 6.25vw, 4rem);
-    padding-bottom:  clamp(1.25rem, -0.7965rem + 5.5vw, 4rem);
+    padding-bottom: clamp(1.25rem, -0.7965rem + 5.5vw, 4rem);
 }
 
 .Badge {
@@ -127,7 +127,7 @@
 }
 
 .Separator:nth-child(6),
-.Separator:last-child,
+.Separator:nth-child(4),
 .Text:last-child {
     @media (max-width: 640px) {
         display: none;
@@ -154,6 +154,12 @@
     color: rgba(255, 255, 255, 0.9);
     margin-bottom: 32px;
     max-width: 600px;
+
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .Buttons {
